final version for 1 query

--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="C:/Users/HES/Downloads/jsoup-1.16.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HES/Downloads/commons-io-2.15.0-bin/commons-io-2.15.0/commons-io-2.15.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HES/Downloads/json-20231013.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HES/Downloads/commons-text-1.11.0-bin/commons-text-1.11.0/commons-text-1.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
